feat: group deadline views by project